force-app/main/default/objects/QuoteLineItem/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field used to tag those promotions has been applied.</description>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>