force-app/main/default/objects/QuoteLineItem/fields/Changed__c.field-meta.xml
<CustomField>
    <fullName>Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will to track the sales price when they got changed.</description>
    <label>Changed</label>
    <type>Checkbox</type>
</CustomField>