force-app/main/default/objects/QuoteLineItem/fields/Default_Discount__c.field-meta.xml
<CustomField>
    <fullName>Default_Discount__c</fullName>
    <label>Default Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>