force-app/main/default/objects/QuoteLineItem/fields/Is_Generated_With_Opty__c.field-meta.xml
<CustomField>
    <fullName>Is_Generated_With_Opty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this recored is generated with Opty</description>
    <label>Is Generated With Opty</label>
    <type>Checkbox</type>
</CustomField>