force-app/main/default/objects/QuoteLineItem/fields/Limit_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Limit_Promotion__c</fullName>
    <formula>Product2.Maxmimum_Promotion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>