force-app/main/default/objects/QuoteLineItem/fields/Origin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Origin_Amount__c</fullName>
    <label>Origin Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>