force-app/main/default/objects/QuoteLineItem/fields/Price_Standard__c.field-meta.xml
<CustomField>
    <fullName>Price_Standard__c</fullName>
    <formula>PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>