force-app/main/default/objects/QuoteLineItem/fields/Total_Origin__c.field-meta.xml
<CustomField>
    <fullName>Total_Origin__c</fullName>
    <formula>PricebookEntry.UnitPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Origin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>